# test_legal

./: .gitignore  README.md  pyproject.toml  Тестовое_MLE.docx
notebooks/: task_1.ipynb  task_2.ipynb
