[project]
name = "sber-test-legal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
]
